# ncvm-ui

./: .gitignore  CMakeLists.txt  Makefile  README.md  command-line-args.cpp  command-line-args.hpp  compile-test.sh  emulate-target.sh  layout.cpp  layout.hpp  logger.cpp  logger.hpp  main.cpp  ncvm-ui.kdev4  vm-monitor.cpp  vm-monitor.hpp  vm-states.cpp  vm-states.hpp
.kdev4/: ncvm-ui.kdev4
OLD/: NOTES.txt  main.cpp  vm-monitor.hpp
TEMPMOVEDTOCOMPILE/: layout.cpp
logging/: manager.cpp  manager.hpp  sdj.cpp  sdj.hpp  writer.cpp  writer.hpp
ncurses-testing/: test1
old/ncurses-play/: myncursesapp.cpp  test.cpp  testncurses.cpp  worm  worm.cpp
old/system_analyser-main/: README.md  SystemAnalyser.cpp  SystemAnalyser.h  main  main.cpp
tests/: Makefile  create-vm.sh  emulate-target.sh  fanotify-test2.c  fanotify-test3.cpp  ncvm-ui  startssh.sh  testui.sh
tests/ISO/: quick-boot.sh
tests/LearningSnippets/: libvirt_callback  libvirt_callback_example.c  libvirt_callback_example2.c  libvirt_example  libvirt_example.c  libvirt_junk.c  menu  menu-example.c  ncurses-mouse-test.c  ncurses-panel-test  ncurses-panel-test.c  ncurses-panel-test2  ncurses-panel-test2.c
tests/basic-ncurses/: Makefile
tests/mouse-button-test/: layout.cpp  layout.hpp  main.c  vm-monitor.cpp
tests/ncvm-test1/: Makefile  command-line-args.hpp  layout.d  logger.d  main.cpp  main.d  vm-monitor.d  vm-states.cpp  vm-states.d  vm-states.hpp
tests/ncvm-ui/: Makefile  layout.cpp  layout.d  layout.hpp  main.cpp  main.d  ncvm-ui  testui.sh
ui/: event-handler.cpp  event-handler.hpp  event_handler.cpp  event_handler.hpp  layout.cpp  layout.hpp
ui/windows/: background.cpp  background.hpp  collection.cpp  collection.hpp  exit-selector.cpp  exit-selector.hpp  help.cpp  help.hpp  information.cpp  information.hpp  options-button.cpp  options-button.hpp  options-selector.cpp  options-selector.hpp  options.cpp  options.hpp  rectangle.cpp  rectangle.hpp
ui/windows/application-status/: box.cpp  box.hpp
ui/windows/journal/: inside.cpp  inside.hpp  outter-frame.cpp  outter-frame.hpp
ui/windows/options-menu/: about.cpp  about.hpp  exit.cpp  exit.hpp  options-window.cpp  options-window.hpp
ui/windows/status/: inside.cpp  inside.hpp  outter-frame.cpp  outter-frame.hpp
ui/windows/vm-control/: four.cpp  four.hpp  one.cpp  one.hpp  three.cpp  three.hpp  two.cpp  two.hpp  vm-controller.cpp  vm-controller.hpp  vm-outter-frame.cpp  vm-outter-frame.hpp
unit-tests/mouse-button-test/: test1
vm/: collection.cpp  collection.hpp  manager.cpp  manager.hpp
